Realmの追加とUWPの追加

--- a/MultiPlatformTest/MultiPlatformTest.csproj
+++ b/MultiPlatformTest/MultiPlatformTest.csproj
@@ -6,11 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Realm" Version="4.3.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991640" />
     <PackageReference Include="Xamarin.Essentials" Version="1.4.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Resources\index.html" />
