--- a/MultiPlatformTest.WPF/packages.config
+++ b/MultiPlatformTest.WPF/packages.config
@@ -1,7 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fody" version="6.1.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net47" />
+  <package id="Nito.AsyncEx.Context" version="5.0.0" targetFramework="net47" />
+  <package id="Nito.AsyncEx.Tasks" version="5.0.0" targetFramework="net47" />
+  <package id="Nito.Disposables" version="2.0.0" targetFramework="net47" />
   <package id="OpenTK" version="3.0.1" targetFramework="net47" />
   <package id="OpenTK.GLControl" version="3.0.1" targetFramework="net47" />
+  <package id="Realm" version="4.3.0" targetFramework="net47" />
+  <package id="Realm.Fody" version="4.3.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Remotion.Linq" version="2.2.0" targetFramework="net47" />
+  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net47" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Management" version="4.5.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net47" />
   <package id="Xamarin.Forms" version="4.4.0.991640" targetFramework="net47" />
   <package id="Xamarin.Forms.Platform.WPF" version="4.4.0.991640" targetFramework="net47" />
 </packages>
