--- a/MultiPlatformTest.Android/MultiPlatformTest.Android.csproj
+++ b/MultiPlatformTest.Android/MultiPlatformTest.Android.csproj
@@ -85,6 +85,8 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DependencyService\ApplicationUtil.cs" />
+    <Compile Include="RestartActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -111,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
+    <Folder Include="DependencyService\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultiPlatformTest\MultiPlatformTest.csproj">
