--- a/MultiPlatformTest.Android/Properties/AndroidManifest.xml
+++ b/MultiPlatformTest.Android/Properties/AndroidManifest.xml
@@ -4,4 +4,5 @@
 	<application android:label="MultiPlatformTest.Android" android:usesCleartextTraffic="true"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 </manifest>
