--- a/MultiPlatformTest.iOS/MultiPlatformTest.iOS.csproj
+++ b/MultiPlatformTest.iOS/MultiPlatformTest.iOS.csproj
@@ -66,6 +66,7 @@
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HybridWebViewRenderer.cs" />
+    <Compile Include="DependencyService\ApplicationUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -133,5 +134,8 @@
       <Project>{2082BF41-312B-4882-B53E-324C287DC652}</Project>
       <Name>MultiPlatformTest</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DependencyService\" />
   </ItemGroup>
 </Project>
